--- a/src/css/githubContent.css
+++ b/src/css/githubContent.css
@@ -18,10 +18,6 @@
   border-bottom: 0px;
 }
 
-.desc, .lang {
-  display: block;
-}
-
 @media only screen and (max-width: 816px) {
   .desc {
     display: none;
@@ -29,7 +25,7 @@
 }
 
 @media only screen and (max-width: 600px) {
-  .desc, .lang {
+  .lang {
     display: none;
   }
 }
