--- a/src/css/resumeContent.css
+++ b/src/css/resumeContent.css
@@ -47,3 +47,19 @@
     display: none;
   }
 }
+
+@media only screen and (max-width: 470px) {
+  .company, .timing, .title, .skills-item {
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .skills-item {
+    grid-column-end: 3;
+  }
+
+  .timing {
+    display: none;
+  }
+}
